--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Fachrezi</a>.
+      >. Coded by
+      <a href="https://www.linkedin.com/in/muhammad-fachrezi-barus/">Fachrezi</a
+      >.
     </footer>
   </body>
 </html>
